# muscular-example

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
butko_info/: __init__.py  cli.py  config.py  db.py  server.py  templates.py  value_objects.py  web.py
butko_info/platform/: __init__.py  route_registrar.py
butko_info/static/: site.css
butko_info/templates/: home.html  layout.html  login.html  message.html  resume.html
docs/: PROJECT_GUIDE.en.md  PROJECT_GUIDE.ru.md
example_1/: __init__.py  server.py  web.py
example_2/: __init__.py  server.py  web.py
example_3/: __init__.py  cli.py
example_4/: __init__.py  cli.py  config.py  db.py  server.py  templates.py  value_objects.py  web.py
example_4/templates/: admin.html  diagnostics.html  home.html  layout.html
example_5/: __init__.py  data_ai_documents.py  server.py  web.py
example_6/: __init__.py  protocols_observability.py  server.py  web.py
example_7/: __init__.py  data_ports.py  web.py
example_data_common/: __init__.py  fakes.py
example_data_elasticsearch_1/: data_ports.py
example_data_mongodb_1/: data_ports.py
example_data_opensearch_1/: data_ports.py
example_data_qdrant_1/: data_ports.py
example_data_redis_1/: data_ports.py
example_data_s3_1/: data_ports.py
example_data_sqlalchemy_1/: data_ports.py
tests/: test_cli.py  test_ecosystem_extensions.py  test_examples_by_level.py  test_framework_contract.py  test_framework_features.py  test_route_registrar.py  test_smoke.py
typings/muscles/asgi/: __init__.pyi
(+7 files in other folders)
