[project]
name = "muscular-example"
version = "0.1.0"
description = "Layered learning examples for the Muscles framework"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "../muscles/src",
  "../muscles-asgi/src",
  "../muscles-wsgi/src",
  "../muscles-cli/src",
  "../muscles-sql/src",
  "../muscles-ai/src",
  "../muscles-documents/src",
  "../muscles-jsonrpc/src",
  "../muscles-sse/src",
  "../muscles-otel/src",
  "../muscles-mcp/src",
  ".",
  "../muscles-data/src",
  "../muscles-data-mongodb/src",
]
